Fix styles on mobile, fix sizing, fix contact and about page

--- a/src/components/Layout/index.scss
+++ b/src/components/Layout/index.scss
@@ -1,3 +1,11 @@
+.App {
+  width: 100vw;
+  height: 100vh;
+  position: absolute;
+  margin: 0;
+  padding: 0;
+}
+
 .page {
   width: 100%;
   height: 100%;
@@ -191,7 +199,7 @@
 
 @media (max-width:961px) {
   .tags {
-    font-size: 3rem;
+    font-size: 2rem;
     left: 40px;
   }
 
@@ -217,7 +225,7 @@
     font-size: 7rem;
     line-height: 9rem;
     &:before, &:after {
-      font-size: 3rem;
+      font-size: 2rem;
     }
   }
   p {
@@ -225,7 +233,7 @@
   }
   h2 {
     color: white;
-    font-size: 2em;
+    font-size: 2rem;
   }
 }
 
@@ -235,20 +243,86 @@
       max-height: 90%;
       z-index: 1000;
       h1 {
-        font-size: 7em;
-        line-height: 1em;
+        font-size: 6rem;
+        line-height: 7.25rem;
       }
       .tags-h1 {
-        font-size: 3em;
+        font-size: 2rem;
       }
       h2 {
         color: white;
-        font-size: 2em;
+        font-size: 2rem;
       }
       .link {
-        font-size: 2em;
+        font-size: 2rem;
       }
     }
   }
 }
 
+@media (max-width:481px) {
+  .tags {
+    font-size: 2rem;
+    left: 40px;
+  }
+
+  .top-tags {
+    top: 80px;
+  }
+  
+  .bottom-tags {
+    bottom: 80px;
+  }
+
+
+.container.contact-page,
+.container.about-page,
+.container.portfolio-page,
+.container.jobs-page,
+.container.portfolio-selected-page,
+.container.jobs-selected-page{
+  .text-zone {
+    width: 65%;
+    height: 70%;
+    left: 25%;
+  }
+  h1 {
+    font-size: 3rem;
+    line-height: 3.5rem;
+    padding-top: 1rem;
+    &:before, &:after {
+      font-size: 2rem;
+    }
+  }
+  p {
+    font-size: 1.5rem;
+    margin-top: 0;
+  }
+  h2 {
+    color: white;
+    font-size: 2rem;
+  }
+}
+
+  .home-page {
+    .text-zone {
+      width: 90%;
+      max-height: 90%;
+      z-index: 1000;
+      h1 {
+        font-size: 3rem;
+        line-height: 2.75rem;
+      }
+      .tags-h1 {
+        font-size: 2rem;
+      }
+      h2 {
+        color: white;
+        font-size: 1.25rem;
+      }
+      .link {
+        font-size: 1rem;
+      }
+    }
+  }
+}
